--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ pytz = "==2023.3.post1"
 sqlparse = "==0.4.4"
 typing-extensions = "==4.9.0"
 tzdata = "==2023.3"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 
