--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons-kit": "^2.0.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
