--- a/Pipfile
+++ b/Pipfile
@@ -19,9 +19,11 @@ pytz = "==2023.3.post1"
 sqlparse = "==0.4.4"
 typing-extensions = "==4.9.0"
 tzdata = "==2023.3"
-djangorestframework-simplejwt = "*"
+djangorestframework-simplejwt = "==5.3.1"
+packaging = "==23.2"
+pyjwt = "==2.8.0"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.11.5"
