--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ tzdata = "==2023.3"
 djangorestframework-simplejwt = "==5.3.1"
 packaging = "==23.2"
 pyjwt = "==2.8.0"
+django-rest-passwordreset = "*"
 
 [dev-packages]
 
